Made a github themed home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Home</title>
 </head>
 <body>
-    Hello world
+    <div class="Container">
+        <div class="Title">Home page</div>
+        <div class="Content">
+            <div id="work" class="ContentEl">
+                <div class="ContentTitle">Main</div>
+                <div class="Wrapper">
+                    <div class="Elem">
+                        <a href="https://github.com/" target="blank">Github</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://mail.google.com/mail/u/0/#inbox" target="blank">Gmail</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://www.uio.no/" target="blank">UIO</a>
+                    </div>
+                </div>
+            </div>
+            <div id="uio" class="ContentEl">
+                <div class="ContentTitle">Subjects</div>
+                <div class="Wrapper">
+                    <div class="Elem">
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3110/h21/index.html" target="blank">IN3110</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1910/h21/index.html" target="blank">IN1910</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT1120/h21/index.html" target="blank">MAT1120</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
