--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <div class="ContentTitle">Main</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://github.com/" target="blank">Github</a>
+                        <a href="https://github.com/" target="_blank">Github</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://mail.google.com/mail/u/0/#inbox" target="blank">Gmail</a>
+                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/" target="blank">UIO</a>
+                        <a href="https://www.uio.no/" target="_blank">UIO</a>
                     </div>
                 </div>
             </div>
@@ -29,13 +29,13 @@
                 <div class="ContentTitle">Subjects</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3110/h21/index.html" target="blank">IN3110</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3110/h21/index.html" target="_blank">IN3110</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1910/h21/index.html" target="blank">IN1910</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1910/h21/index.html" target="_blank">IN1910</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT1120/h21/index.html" target="blank">MAT1120</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT1120/h21/index.html" target="_blank">MAT1120</a>
                     </div>
                 </div>
             </div>
