Added some uio tools

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div id="uio" class="ContentEl">
+            <div id="subjects" class="ContentEl">
                 <div class="ContentTitle">Subjects</div>
                 <div class="Wrapper">
                     <div class="Elem">
@@ -36,6 +36,20 @@
                     </div>
                     <div class="Elem">
                         <a href="https://www.uio.no/studier/emner/matnat/math/MAT1120/h21/index.html" target="_blank">MAT1120</a>
+                    </div>
+                </div>
+            </div>
+            <div id="tools" class="ContentEl">
+                <div class="ContentTitle">UIO tools</div>
+                <div class="Wrapper">
+                    <div class="Elem">
+                        <a href="https://mail.uio.no/" target="_blank">UiO mail</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://studentweb.uio.no/" target="_blank">Studentweb</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://minestudier.uio.no/" target="_blank">Mine studier</a>
                     </div>
                 </div>
             </div>
