Added some uio tools

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="ContentTitle">UIO tools</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://mail.uio.no/" target="_blank">UiO mail</a>
+                        <a href="https://mail.uio.no/" target="_blank">UIO mail</a>
                     </div>
                     <div class="Elem">
                         <a href="https://studentweb.uio.no/" target="_blank">Studentweb</a>
