Update links to new subjects and made a personal section

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="Title">Home page</div>
         <div class="Content">
             <div id="work" class="ContentEl">
-                <div class="ContentTitle">Main</div>
+                <div class="ContentTitle">Personal</div>
                 <div class="Wrapper">
                     <div class="Elem">
                         <a href="https://github.com/" target="_blank">Github</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a>
+                        <a href="https://cloud.linode.com/" target="_blank">Linode</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/" target="_blank">UIO</a>
+                        <a href="https://build.thelexxirose.tech" target="_blank">Build Server</a>
                     </div>
                 </div>
             </div>
@@ -29,13 +29,13 @@
                 <div class="ContentTitle">Subjects</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3110/h21/index.html" target="_blank">IN3110</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3200/v22/index.html" target="_blank">IN3200</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1910/h21/index.html" target="_blank">IN1910</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT2100/v22/index.html" target="_blank">MAT2100</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT1120/h21/index.html" target="_blank">MAT1120</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT2200/v22/index.html" target="_blank">MAT2200</a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <div class="ContentTitle">UIO tools</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://mail.uio.no/" target="_blank">UIO mail</a>
+                        <a href="https://github.uio.no" target="_blank">Github UiO</a>
                     </div>
                     <div class="Elem">
                         <a href="https://studentweb.uio.no/" target="_blank">Studentweb</a>
