Made a minor change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="https://cloud.linode.com/" target="_blank">Linode</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://build.thelexxirose.tech" target="_blank">Build Server</a>
+                        <a href="page_not_up.html">Build Server</a>
                     </div>
                 </div>
             </div>
