Changed subjects for the fall semester

--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
                 <div class="ContentTitle">Subjects</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3200/v22/index.html" target="_blank">IN3200</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT3110/h22/index.html" target="_blank">MAT3110</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT2100/v22/index.html" target="_blank">MAT2100</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2010/h22/index.html" target="_blank">IN2010</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT2200/v22/index.html" target="_blank">MAT2200</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2040/h22/index.html" target="_blank">IN2040</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3040/h22/index.html" target="_blank">IN3040</a>
                     </div>
                 </div>
             </div>
