Added things for the new semester

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <div class="Title">Home page</div>
         <div class="Content">
             <div id="work" class="ContentEl">
-                <div class="ContentTitle">Personal</div>
+                <div class="ContentTitle">Tools</div>
                 <div class="Wrapper">
                     <div class="Elem">
                         <a href="https://github.com/" target="_blank">Github</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://cloud.linode.com/" target="_blank">Linode</a>
+                        <a href="https://fishshell.com/">Fish shell</a>
                     </div>
                     <div class="Elem">
-                        <a href="page_not_up.html">Build Server</a>
+                        <a href="https://wiki.osdev.org/Main_Page">OS DEV</a>
                     </div>
                 </div>
             </div>
@@ -29,16 +29,13 @@
                 <div class="ContentTitle">Subjects</div>
                 <div class="Wrapper">
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT3110/h22/index.html" target="_blank">MAT3110</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/math/MAT3110/h22/index.html" target="_blank">IN3000</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2010/h22/index.html" target="_blank">IN2010</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2010/h22/index.html" target="_blank">MAT2200</a>
                     </div>
                     <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2040/h22/index.html" target="_blank">IN2040</a>
-                    </div>
-                    <div class="Elem">
-                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3040/h22/index.html" target="_blank">IN3040</a>
+                        <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2040/h22/index.html" target="_blank">EXPHIL03</a>
                     </div>
                 </div>
             </div>
@@ -53,6 +50,9 @@
                     </div>
                     <div class="Elem">
                         <a href="https://minestudier.uio.no/" target="_blank">Mine studier</a>
+                    </div>
+                    <div class="Elem">
+                        <a href="https://uio.instructure.com/">Canvas</a>
                     </div>
                 </div>
             </div>
