Added target blanks to some links

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                             <a href="https://github.com/" target="_blank">Github</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://fishshell.com/">Fish shell</a>
+                            <a href="https://fishshell.com/" target="_blank">Fish shell</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://wiki.osdev.org/Main_Page">OS DEV</a>
+                            <a href="https://wiki.osdev.org/Main_Page" target="_blank">OS DEV</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                             <a href="https://minestudier.uio.no/" target="_blank">Mine studier</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://uio.instructure.com/">Canvas</a>
+                            <a href="https://uio.instructure.com/" target="_blank">Canvas</a>
                         </div>
                     </div>
                 </div>
