Updated for Fall 2023

--- a/index.html
+++ b/index.html
@@ -29,13 +29,24 @@
                     <div class="ContentTitle">Subjects</div>
                     <div class="Wrapper">
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3000/v23/index.html" target="_blank">IN3000</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1150/h23/index.html" target="_blank">IN1150</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/math/MAT2200/v23/index.html" target="_blank">MAT2200</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/fys/FYS3150/h23/index.html" target="_blank">FYS3150</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/v23/index.html" target="_blank">EXPHIL03</a>
+                            <a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/h23/index.html" target="_blank">EXPHIL03</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="extra" class="ContentEl">
+                    <div class="ContentTitle">Extra Content</div>
+                    <div class="Wrapper">
+                        <div class="Elem">
+                            <a href="https://logiskemetoder.no/nettkurs/" target="_blank">IN1150 Course Material</a>
+                        </div>
+                        <div class="Elem">
+                            <a href="https://anderkve.github.io/FYS3150/intro.html" target="_blank">FYS3150 Course Material</a>
                         </div>
                     </div>
                 </div>
