Add obligatory assignments

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                             <a href="https://logiskemetoder.no/nettkurs/" target="_blank">IN1150 Course Material</a>
                         </div>
                         <div class="Elem">
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1150/h23/innleveringer/" target="_blank">IN1150 Obligatory assignments</a>
+                        </div>
+                        <div class="Elem">
                             <a href="https://anderkve.github.io/FYS3150/intro.html" target="_blank">FYS3150 Course Material</a>
                         </div>
                     </div>
