Changed Exphil03 to IN2040

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="https://www.uio.no/studier/emner/matnat/fys/FYS3150/h23/index.html" target="_blank">FYS3150</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/h23/index.html" target="_blank">EXPHIL03</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2040/h23/index.html" target="_blank">IN2040</a>
                         </div>
                     </div>
                 </div>
@@ -50,6 +50,9 @@
                         </div>
                         <div class="Elem">
                             <a href="https://anderkve.github.io/FYS3150/intro.html" target="_blank">FYS3150 Course Material</a>
+                        </div>
+                        <div class="Elem">
+                            <a href="https://github.uio.no/IN2040/h23/tree/main/obliger" target="_blank">IN2040 Obligatory assignments</a>
                         </div>
                     </div>
                 </div>
