Make changes for V24

--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
         <div class="Container">
             <div class="Title">Home page</div>
             <div class="Content">
-                <div id="work" class="ContentEl">
-                    <div class="ContentTitle">Tools</div>
+                <div id="remote-management" class="ContentEl">
+                    <div class="ContentTitle">Remote Code Management</div>
                     <div class="Wrapper">
                         <div class="Elem">
                             <a href="https://github.com/" target="_blank">Github</a>
                         </div>
+                        <div class="Elem">
+                            <a href="https://github.uio.no/" target="_blank">Github UiO</a>
+                        </div>
+                        <div class="Elem">
+                            <a href="https://gitea.balaton.dev" target="_blank">Gitea</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="work" class="ContentEl">
+                    <div class="ContentTitle">Tools</div>
+                    <div class="Wrapper">
                         <div class="Elem">
                             <a href="https://fishshell.com/" target="_blank">Fish shell</a>
                         </div>
@@ -29,39 +40,30 @@
                     <div class="ContentTitle">Subjects</div>
                     <div class="Wrapper">
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1150/h23/index.html" target="_blank">IN1150</a>
+                            <a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/v24/index.html" target="_blank">EXPHIL03</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/fys/FYS3150/h23/index.html" target="_blank">FYS3150</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3030/v24/index.html" target="_blank">IN3030</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN2040/h23/index.html" target="_blank">IN2040</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/math/MAT2250/v24/index.html" target="_blank">MAT2250</a>
                         </div>
                     </div>
                 </div>
                 <div id="extra" class="ContentEl">
-                    <div class="ContentTitle">Extra Content</div>
+                    <div class="ContentTitle">Group Teacher Subject</div>
                     <div class="Wrapper">
                         <div class="Elem">
-                            <a href="https://logiskemetoder.no/nettkurs/" target="_blank">IN1150 Course Material</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3000/v24/index.html" target="_blank">IN3000</a>
                         </div>
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1150/h23/innleveringer/" target="_blank">IN1150 Obligatory assignments</a>
-                        </div>
-                        <div class="Elem">
-                            <a href="https://anderkve.github.io/FYS3150/intro.html" target="_blank">FYS3150 Course Material</a>
-                        </div>
-                        <div class="Elem">
-                            <a href="https://github.uio.no/IN2040/h23/tree/main/obliger" target="_blank">IN2040 Obligatory assignments</a>
+                            <a href="https://github.uio.no/IN3000" target="_blank">IN3000 Github</a>
                         </div>
                     </div>
                 </div>
                 <div id="tools" class="ContentEl">
                     <div class="ContentTitle">UIO tools</div>
                     <div class="Wrapper">
-                        <div class="Elem">
-                            <a href="https://github.uio.no" target="_blank">Github UiO</a>
-                        </div>
                         <div class="Elem">
                             <a href="https://studentweb.uio.no/" target="_blank">Studentweb</a>
                         </div>
