Remove spring subjects

--- a/index.html
+++ b/index.html
@@ -39,25 +39,22 @@
                 <div id="subjects" class="ContentEl">
                     <div class="ContentTitle">Subjects</div>
                     <div class="Wrapper">
-                        <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/v24/index.html" target="_blank">EXPHIL03</a>
-                        </div>
-                        <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3030/v24/index.html" target="_blank">IN3030</a>
-                        </div>
-                        <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/math/MAT2250/v24/index.html" target="_blank">MAT2250</a>
-                        </div>
+                        <!--<div class="Elem">-->
+                            <!--<a href="https://www.uio.no/studier/emner/hf/ifikk/EXPHIL03/v24/index.html" target="_blank">EXPHIL03</a>-->
+                        <!--</div>-->
+                        <!--<div class="Elem">-->
+                            <!--<a href="https://www.uio.no/studier/emner/matnat/ifi/IN3030/v24/index.html" target="_blank">IN3030</a>-->
+                        <!--</div>-->
+                        <!--<div class="Elem">-->
+                            <!--<a href="https://www.uio.no/studier/emner/matnat/math/MAT2250/v24/index.html" target="_blank">MAT2250</a>-->
+                        <!--</div>-->
                     </div>
                 </div>
                 <div id="extra" class="ContentEl">
-                    <div class="ContentTitle">Group Teacher Subject</div>
+                    <div class="ContentTitle">IN1910</div>
                     <div class="Wrapper">
                         <div class="Elem">
-                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3000/v24/index.html" target="_blank">IN3000</a>
-                        </div>
-                        <div class="Elem">
-                            <a href="https://github.uio.no/IN3000" target="_blank">IN3000 Github</a>
+                            <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1910/h24/index.html" target="_blank">Semester site</a>
                         </div>
                     </div>
                 </div>
